Add comment lines

--- a/main.ipynb
+++ b/main.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -13,7 +13,12 @@
     "\n",
     "\n",
     "@njit\n",
-    "def box2corners(x, y, w, h, angle):\n",
+    "def box2corners(x: float, y: float, w: float, h: float, angle: float) -> np.ndarray:\n",
+    "    \"\"\"\n",
+    "    中心(x, y), 幅 w, 高さ h, 回転角 angle を持つ矩形(回転BB)の4頂点を計算して返す関数。\n",
+    "    回転行列を用い、回転前の頂点を回転変換する。戻り値は形状 (4, 2) の配列。\n",
+    "    \"\"\"\n",
+    "    # (0.5, -0.5)などで、中心から矩形の四隅までの相対オフセットを定義\n",
     "    dx = np.array([0.5, -0.5, -0.5, 0.5]) * w\n",
     "    dy = np.array([0.5, 0.5, -0.5, -0.5]) * h\n",
     "\n",
@@ -22,50 +27,99 @@
     "\n",
     "    corners = np.empty((4, 2), dtype=np.float64)\n",
     "    for i in range(4):\n",
+    "        # 回転行列 (cos -sin; sin cos) を用いて各頂点を変換\n",
     "        rx = c * dx[i] - s * dy[i]\n",
     "        ry = s * dx[i] + c * dy[i]\n",
+    "        # 中心 (x, y) を加えて最終的な頂点座標を算出\n",
     "        corners[i, 0] = x + rx\n",
     "        corners[i, 1] = y + ry\n",
     "    return corners\n",
     "\n",
     "\n",
     "@njit\n",
-    "def line_seg_intersection(p1, p2):\n",
+    "def line_seg_intersection(p1: np.ndarray, p2: np.ndarray) -> np.ndarray:\n",
+    "    \"\"\"\n",
+    "    2本の線分 p1, p2 (それぞれ始点と終点の座標を持つ2x2配列) が交差するか判定し、\n",
+    "    交点があればその座標を返す。なければ空配列を返す。\n",
+    "\n",
+    "    与えられた2つの線分 \\( P_1P_2 \\) と \\( P_3P_4 \\) に対して、交点 \\( I \\) を求める手順は以下の通り（以下chatgpt補完）:\n",
+    "    1. **ベクトルの計算**：\n",
+    "    \\[\n",
+    "    \\mathbf{r} = P_2 - P_1 = (x_2 - x_1, \\; y_2 - y_1) \\\\\n",
+    "    \\mathbf{s} = P_4 - P_3 = (x_4 - x_3, \\; y_4 - y_3)\n",
+    "    \\]\n",
+    "\n",
+    "    2. **外積（分母）の計算**：\n",
+    "    \\[\n",
+    "    \\text{denom} = \\mathbf{r} \\times \\mathbf{s} = (x_2 - x_1)(y_4 - y_3) - (y_2 - y_1)(x_4 - x_3)\n",
+    "    \\]\n",
+    "    - **分母が0の場合**: 線分は平行または重なっている。\n",
+    "\n",
+    "    3. **パラメータ \\( t \\) と \\( u \\) の計算**：\n",
+    "    \\[\n",
+    "    t = \\frac{(x_3 - x_1)(y_4 - y_3) - (y_3 - y_1)(x_4 - x_3)}{\\text{denom}} \\\\\n",
+    "    u = \\frac{(x_3 - x_1)(y_2 - y_1) - (y_3 - y_1)(x_2 - x_1)}{\\text{denom}}\n",
+    "    \\]\n",
+    "\n",
+    "    4. **交点の存在確認**：\n",
+    "    \\[\n",
+    "    0 \\leq t \\leq 1 \\quad \\text{かつ} \\quad 0 \\leq u \\leq 1\n",
+    "    \\]\n",
+    "\n",
+    "    5. **交点の計算**：\n",
+    "    \\[\n",
+    "    I = P_1 + t \\mathbf{r} = (x_1 + t (x_2 - x_1), \\; y_1 + t (y_2 - y_1))\n",
+    "    \\]\n",
+    "    \"\"\"\n",
     "    x1, y1 = p1[0, 0], p1[0, 1]\n",
     "    x2, y2 = p1[1, 0], p1[1, 1]\n",
     "    x3, y3 = p2[0, 0], p2[0, 1]\n",
     "    x4, y4 = p2[1, 0], p2[1, 1]\n",
     "\n",
+    "    # 2直線のパラメータ方程式の分母 (外積) を計算\n",
     "    denom = (x1 - x2) * (y3 - y4) - (y1 - y2) * (x3 - x4)\n",
     "    if np.abs(denom) < EPS:\n",
-    "        return np.empty((0, 2), dtype=np.float64)  # 空の配列を返す\n",
+    "        # 分母がほぼ0 → 平行 or 重なり → 交点なし扱い\n",
+    "        return np.empty((0, 2), dtype=np.float64)\n",
     "\n",
+    "    # パラメータ t, u を算出し、線分範囲内(0～1)かをチェック\n",
     "    t = ((x1 - x3) * (y3 - y4) - (y1 - y3) * (x3 - x4)) / denom\n",
     "    u = -((x1 - x2) * (y1 - y3) - (y1 - y2) * (x1 - x3)) / denom\n",
     "    if t < 0.0 or t > 1.0 or u < 0.0 or u > 1.0:\n",
-    "        return np.empty((0, 2), dtype=np.float64)  # 空の配列を返す\n",
+    "        return np.empty((0, 2), dtype=np.float64)\n",
     "\n",
+    "    # 線分上に交点がある場合、その座標を返す\n",
     "    inter_x = x1 + t * (x2 - x1)\n",
     "    inter_y = y1 + t * (y2 - y1)\n",
-    "    return np.array([[inter_x, inter_y]], dtype=np.float64)  # 2次元配列\n",
+    "    return np.array([[inter_x, inter_y]], dtype=np.float64)\n",
     "\n",
     "\n",
     "@njit\n",
-    "def point_in_box(pt, corners):\n",
+    "def point_in_box(pt: np.ndarray, corners: np.ndarray) -> bool:\n",
+    "    \"\"\"\n",
+    "    pt(点) が、与えられた回転矩形 corners の内部にあるか否かを判定する。\n",
+    "    ベクトルの内積を用いた射影チェックにより内外を判別。真なら内部。\n",
+    "    \"\"\"\n",
+    "    # 矩形の頂点(以下 0,1,3番目を取り出し、ベクトルAB, ADを作成)\n",
     "    Ax, Ay = corners[0, 0], corners[0, 1]\n",
     "    Bx, By = corners[1, 0], corners[1, 1]\n",
     "    Dx, Dy = corners[3, 0], corners[3, 1]\n",
     "\n",
-    "    ABx, ABy = (Bx - Ax), (By - Ay)\n",
-    "    ADx, ADy = (Dx - Ax), (Dy - Ay)\n",
-    "    AMx, AMy = (pt[0] - Ax), (pt[1] - Ay)\n",
+    "    # AB, AD, AM(=pt - A) のベクトル\n",
+    "    ABx, ABy = Bx - Ax, By - Ay\n",
+    "    ADx, ADy = Dx - Ax, Dy - Ay\n",
+    "    AMx, AMy = pt[0] - Ax, pt[1] - Ay\n",
     "\n",
+    "    # dotAB: AB と AM の内積, dotAB_AB: AB 同士の内積(=|AB|^2)\n",
     "    dotAB = ABx * AMx + ABy * AMy\n",
     "    dotAB_AB = ABx * ABx + ABy * ABy\n",
     "\n",
+    "    # 同様にADベクトルとの内積\n",
     "    dotAD = ADx * AMx + ADy * AMy\n",
     "    dotAD_AD = ADx * ADx + ADy * ADy\n",
     "\n",
+    "    # 内積の値が 0～|AB|^2, 0～|AD|^2 の範囲にあるかチェック\n",
+    "    # 範囲外なら四辺形の外部 or 辺上よりも外側\n",
     "    if dotAB < -EPS or dotAB > dotAB_AB + EPS:\n",
     "        return False\n",
     "    if dotAD < -EPS or dotAD > dotAD_AD + EPS:\n",
@@ -74,9 +128,15 @@
     "\n",
     "\n",
     "@njit\n",
-    "def intersection_polygon(corners1, corners2):\n",
+    "def intersection_polygon(corners1: np.ndarray, corners2: np.ndarray) -> np.ndarray:\n",
+    "    \"\"\"\n",
+    "    2つの回転矩形 corners1, corners2 の交差多角形を求める。\n",
+    "    辺同士の交点と、一方の頂点が他方の矩形に含まれるかを確認し、頂点群を得る。\n",
+    "    重複を除去して交差領域を表す多角形の頂点リストを返す。\n",
+    "    \"\"\"\n",
     "    pts = []\n",
-    "    # 辺同士の交点\n",
+    "\n",
+    "    # 1) 辺同士の交点探索 (各4辺の全組み合わせ)\n",
     "    for i in range(4):\n",
     "        seg1 = np.zeros((2, 2), dtype=np.float64)\n",
     "        seg1[0] = corners1[i]\n",
@@ -87,19 +147,20 @@
     "            seg2[0] = corners2[j]\n",
     "            seg2[1] = corners2[(j + 1) % 4]\n",
     "            inter = line_seg_intersection(seg1, seg2)\n",
-    "            if inter.shape[0] > 0:  # 交点あり\n",
+    "            if inter.shape[0] > 0:  # 交点がある場合\n",
     "                pts.append((inter[0, 0], inter[0, 1]))\n",
     "\n",
-    "    # 頂点の包含チェック\n",
+    "    # 2) corners1の頂点が、corners2に包含されるか\n",
     "    for i in range(4):\n",
     "        if point_in_box(corners1[i], corners2):\n",
     "            pts.append((corners1[i, 0], corners1[i, 1]))\n",
     "\n",
+    "    # 3) corners2の頂点が、corners1に包含されるか\n",
     "    for j in range(4):\n",
     "        if point_in_box(corners2[j], corners1):\n",
     "            pts.append((corners2[j, 0], corners2[j, 1]))\n",
     "\n",
-    "    # 重複除去\n",
+    "    # 4) 重複頂点の除去 (数値誤差を考慮し EPS 以下なら同一点とみなす)\n",
     "    unique_pts = []\n",
     "    for p in pts:\n",
     "        is_duplicate = False\n",
@@ -110,29 +171,39 @@
     "        if not is_duplicate:\n",
     "            unique_pts.append(p)\n",
     "\n",
+    "    # 結果の頂点が空の場合は空配列を返す\n",
     "    if not unique_pts:\n",
     "        return np.empty((0, 2), dtype=np.float64)\n",
     "    return np.array(unique_pts, dtype=np.float64)\n",
     "\n",
     "\n",
     "@njit\n",
-    "def polygon_area(points):\n",
+    "def polygon_area(points: np.ndarray) -> float:\n",
+    "    \"\"\"\n",
+    "    先に計算した交差多角形の（points が示す頂点リスト）の面積を\n",
+    "    shoelace formula (靴紐公式) に基づいて計算。\n",
+    "    ただし、頂点を重心まわりに並び替えてからshoelace formulaを適用。\n",
+    "\n",
+    "    交差多角形は、凸多角形である矩形２つの交差部分に対応しているが、 凸集合の交差は凸である。\n",
+    "    以下に行う手続のアイデアは凸包の頂点取得と類似した形で記述ができる。\n",
+    "    \"\"\"\n",
     "    n = points.shape[0]\n",
     "    if n < 3:\n",
-    "        return 0.0\n",
+    "        return 0.0  # 3頂点未満は面積ゼロ\n",
     "\n",
+    "    # 頂点の重心を計算\n",
     "    cx = np.sum(points[:, 0]) / n\n",
     "    cy = np.sum(points[:, 1]) / n\n",
     "\n",
+    "    # 重心を原点とみなし、角度でソート\n",
     "    shifted = points.copy()\n",
     "    shifted[:, 0] -= cx\n",
     "    shifted[:, 1] -= cy\n",
-    "\n",
-    "    # 角度でソート\n",
     "    angles = np.arctan2(shifted[:, 1], shifted[:, 0])\n",
     "    order = np.argsort(angles)\n",
     "    sorted_pts = shifted[order]\n",
     "\n",
+    "    # shoelace formulaで面積計算\n",
     "    area_val = 0.0\n",
     "    for i in range(n):\n",
     "        x1, y1 = sorted_pts[i]\n",
@@ -142,7 +213,11 @@
     "\n",
     "\n",
     "@njit\n",
-    "def rotated_iou(box1, box2):\n",
+    "def rotated_iou(box1: np.ndarray, box2: np.ndarray) -> float:\n",
+    "    \"\"\"\n",
+    "    box1, box2: [x, y, w, h, angle] 形式の回転矩形2つについて、\n",
+    "    それらの交差多角形の面積 / (面積の和 - 交差面積) として IoU を返す。\n",
+    "    \"\"\"\n",
     "    c1 = box2corners(box1[0], box1[1], box1[2], box1[3], box1[4])\n",
     "    c2 = box2corners(box2[0], box2[1], box2[2], box2[3], box2[4])\n",
     "\n",
@@ -160,7 +235,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -178,6 +253,7 @@
     "import numpy as np\n",
     "import matplotlib.pyplot as plt\n",
     "from matplotlib.gridspec import GridSpec\n",
+    "\n",
     "\n",
     "plt.figure(figsize=(9, 9))\n",
     "gs = GridSpec(2, 2)\n",
@@ -264,13 +340,6 @@
     "plt.tight_layout()\n",
     "plt.show()"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
