Add comment lines

--- a/main.ipynb
+++ b/main.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -97,7 +97,7 @@
     "@njit\n",
     "def point_in_box(pt: np.ndarray, corners: np.ndarray) -> bool:\n",
     "    \"\"\"\n",
-    "    pt(点) が、与えられた回転矩形 corners の内部にあるか否かを判定する。\n",
+    "    pt(点) が、与えられた回転矩形 corners の内部にあるか否かを判定する。いわゆる多角形の点包含判定。\n",
     "    ベクトルの内積を用いた射影チェックにより内外を判別。真なら内部。\n",
     "    \"\"\"\n",
     "    # 矩形の頂点(以下 0,1,3番目を取り出し、ベクトルAB, ADを作成)\n",
@@ -185,7 +185,7 @@
     "    ただし、頂点を重心まわりに並び替えてからshoelace formulaを適用。\n",
     "\n",
     "    交差多角形は、凸多角形である矩形２つの交差部分に対応しているが、 凸集合の交差は凸である。\n",
-    "    以下に行う手続のアイデアは凸包の頂点取得と類似した形で記述ができる。\n",
+    "    以下に行う手続のアイデアは凸包の頂点取得や凸多角形の面積計算で記述ができる。\n",
     "    \"\"\"\n",
     "    n = points.shape[0]\n",
     "    if n < 3:\n",
