Remove an unnecessary line

--- a/main.ipynb
+++ b/main.ipynb
@@ -235,7 +235,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -329,9 +329,7 @@
     "    # テキスト表示\n",
     "    area1 = box1[2] * box1[3]\n",
     "    area2 = box2[2] * box2[3]\n",
-    "    info_text = f\"IoU: {iou_val:.4f}\\nBox1 Area: {area1}\\nBox2 Area: {area2}\"\n",
-    "    if case[\"expected_iou\"] != \"calculated\":\n",
-    "        info_text += f\"\\nExpected: {case['expected_iou']:.4f}\"\n",
+    "    info_text = f\"IoU: {iou_val:.4f}\\nBox1 Area: {area1}\\nBox2 Area: {area2}\\nExpected: {case['expected_iou']:.4f}\"\n",
     "    ax.text(0.5, -0.15, info_text, transform=ax.transAxes, ha=\"center\", va=\"top\", fontsize=8)\n",
     "\n",
     "    ax.grid(True)\n",
